# rust-tutrial

./: .gitignore  Cargo.toml
ch01/: Cargo.toml
ch02/: Cargo.toml
ch02-00-guessing-game-tutorial/src/: main.rs
ch03/: Cargo.toml
ch03-04-comments/src/: main.rs
ch03-05-control-flow/: Cargo.toml
ch03-05-control-flow/src/: main.rs
ch03/ch03-01-variables-and-mutability/src/: main.rs
ch03/ch03-02-data-types/src/: main.rs
ch03/ch03-03-how-functions-work/src/: main.rs
ch03/ch03-04-comments/: Cargo.toml
ch04/: Cargo.toml
ch04-01-what-is-ownership/src/: main.rs
ch04-03-slices/src/: main.rs
ch04/ch04-02-references-and-borrowing/src/: main.rs
ch05/: Cargo.toml
ch05-01-defining-structs/src/: main.rs
ch05-02-example-structs/src/: main.rs
ch05-03-method-syntax/src/: main.rs
ch06/: Cargo.toml
ch06-02-match/src/: main.rs
ch06-03-if-let/src/: main.rs
ch06/ch06-01-defining-an-enum/src/: main.rs
ch07/: Cargo.toml
ch07-03-paths-for-referring-to-an-item-in-the-module-tree/src/: lib.rs
ch07-04-bringing-paths-into-scope-with-the-use-keyword/src/: lib.rs
ch07/ch07-02-defining-modules-to-control-scope-and-privacy-lib/: Cargo.toml
ch07/ch07-02-defining-modules-to-control-scope-and-privacy/src/: main.rs
ch08/: Cargo.toml
ch08-01-vectors/src/: main.rs
ch08-02-strings/src/: main.rs
ch08/ch08-03-hash-maps/src/: main.rs
ch09/: Cargo.toml
ch09-01-unrecoverable-errors-with-panic/src/: main.rs
ch09-03-to-panic-or-not-to-panic/src/: main.rs
ch09/ch09-02-recoverable-errors-with-result/src/: main.rs
ch10/: Cargo.toml
ch10-02-traits/src/: main.rs
ch10-03-lifetime-syntax/src/: main.rs
ch10/ch10-00-generics/src/: main.rs
ch10/ch10-01-syntax/src/: main.rs
ch11/ch11-01-writing-tests/src/: lib.rs
ch11/ch11-02-running-tests/src/: lib.rs
ch11/ch11-03-test-organization/src/: lib.rs
ch11/ch11-03-test-organization/tests/: common.rs.bk  integration_test.rs
