[workspace]
members = [
  "ch01-03-hello-cargo/",
  "ch02-00-guessing-game-tutorial/",
  "ch03-01-variables-and-mutability/",
  "ch03-02-data-types/",
  "ch03-03-how-functions-work/",
  "ch03-04-comments/",
  "ch03-05-control-flow/",
  "ch04-01-what-is-ownership/",
  "ch04-02-references-and-borrowing/",
  "ch04-03-slices/",
  "ch05-01-defining-structs/",
  "ch05-02-example-structs/",
  "ch05-03-method-syntax/",
  "ch06-01-defining-an-enum/",
  "ch06-02-match/",
  "ch06-03-if-let/",
  "ch07-02-defining-modules-to-control-scope-and-privacy/",
  "ch07-02-defining-modules-to-control-scope-and-privacy-lib/",
  "ch07-03-paths-for-referring-to-an-item-in-the-module-tree/",
  "ch07-04-bringing-paths-into-scope-with-the-use-keyword/",
  "ch07-05-separating-modules-into-different-files/",
  "ch08-01-vectors/",
  "ch08-02-strings/",
  "ch08-03-hash-maps/",
  "ch09-01-unrecoverable-errors-with-panic/",
  "ch09-02-recoverable-errors-with-result/",
  "ch09-03-to-panic-or-not-to-panic/",
]